--- a/config/config.dev.yaml
+++ b/config/config.dev.yaml
@@ -1,7 +1,13 @@
+app:
+  name: Veg Store Backend
+  version: ${APP_VERSION:1.0.0}
+  enable_debug_logs: false # set to true to see all DEBUG level logs
+
 server:
   port: 8080
   api_prefix: /api/
   api_version: v1
+  default_locale: en
 
 security:
   enable_https: false
@@ -11,9 +17,14 @@ security:
   truststore: ${TRUSTSTORE_PATH:truststore.p12}
   truststore_password: ${TRUSTSTORE_PASSWORD:changeit}
   public_endpoints:
-    - /auth/sign-in
+    - /users/hello
+    - /users/:id
+    - /auth/
     - /auth/sign-up
     - /auth/refresh
+    - /tasks/search
+    - /tasks
+    - /tasks/statuses
     - /swagger-ui/*any
 
 jwt:
@@ -25,17 +36,27 @@ jwt:
   public_key: ${PUBLIC_KEY:public.pem}
 
 cors:
-  allow_origins: [ "*" ]
+  allow_origins: [ "http://localhost:5173" ]
   allow_methods: [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ]
-  allow_headers: [ "Content-Type", "Authorization" ]
+  allow_headers: [ "Content-Type", "Authorization" , "No-Auth"]
   allow_credentials: true
 
 swagger:
   host: ${SWAGGER_HOST:localhost:8080}
 
-database:
-  host: postgres
-  port: 5432
-  user: ${POSTGRES_USER:dummy}
-  password: ${POSTGRES_PASSWORD:dummy}
-  name: crud-sample
+# Database configuration
+data:
+  enable_data_seeding: true # set to "true" for the first time then set to "false"
+  postgres:
+    host: postgres
+    port: 5432
+    user: ${POSTGRES_USER:dummy}
+    password: ${POSTGRES_PASSWORD:dummy}
+    db_name: veg-store
+    ddl_mode: create-drop # create-drop | update | none, set to "create-drop" for the first time then set to "update" or "none"
+    ssl:
+      mode: verify-full # verify-full | disable
+      root_cert: ${CA_CERT_PATH:ca/ca.crt}
+      cert: ${CLIENT_CERT_PATH:veg-store-backend/server.crt}
+      key: ${CLIENT_KEY_PATH:veg-store-backend/server.key}
+
