--- a/docker/docker-compose.dev.yml
+++ b/docker/docker-compose.dev.yml
@@ -1,40 +1,48 @@
 services:
   # --------- Postgres ---------
-#  postgres:
-#    image: postgres:${POSTGRES_DOCKER_TAG:-latest}
-#    container_name: postgres
-#    ports:
-#      - "5433:5432"
-#    networks:
-#      - my-network
-#    command: postgres -c 'max_connections=500'
-#    healthcheck:
-#      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d postgres" ]
-#      interval: 30s
-#      timeout: 10s
-#      start_period: 30s
-#      retries: 3
-#    restart: always # unless-stopped
-#    volumes:
-#      - ./postgres/init-db:/docker-entrypoint-initdb.d:ro
-#      - postgres-repository:/var/lib/postgresql/repository
-#    environment:
-#      POSTGRES_USER: ${POSTGRES_USER}
-#      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+  postgres:
+    image: veg-store/postgres-full-ssl
+    container_name: postgres
+    ports:
+      - "5432:5432"
+    networks:
+      - veg-store-network
+    command: >
+      postgres 
+      -c 'max_connections=500'
+      -c ssl=on
+      -c ssl_cert_file=/var/lib/postgresql/18/main/server.crt
+      -c ssl_key_file=/var/lib/postgresql/18/main/server.key
+      -c ssl_ca_file=/var/lib/postgresql/18/main/ca.crt
+    healthcheck:
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d postgres" ]
+      interval: 30s
+      timeout: 10s
+      start_period: 30s
+      retries: 3
+    restart: always # unless-stopped
+    volumes:
+      - ./postgres/postgresql.conf:/usr/share/postgresql/postgresql.conf
+      - ./postgres/init-db:/docker-entrypoint-initdb.d:ro
+      - postgres-data:/var/lib/postgresql/18/main
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
 
   # --------- Application ---------
   veg-store-backend:
-    image: benlun1201/veg-store-backend-builder
+    image: veg-store/backend-builder:${BACKEND_VERSION}
     container_name: veg-store-backend
     ports:
       - "2345:8080" # HTTP - you can change port 2345 to any port that you like
       - "2346:8081" # DEBUG PORT - you can change port 2346 to any port that you like
     networks:
-      - my-network
+      - veg-store-network
     restart: always
     volumes:
       - ..:/app
     environment:
+      APP_VERSION: ${BACKEND_VERSION}
       SWAGGER_HOST: localhost:2345 # this port must same to expose port
       CERT_SECRET: ${CERT_SECRET}
       POSTGRES_USER: ${POSTGRES_USER}
@@ -47,5 +55,5 @@ volumes:
     driver: local
 
 networks:
-  my-network:
+  veg-store-network:
     driver: bridge
