--- a/.gitignore
+++ b/.gitignore
@@ -71,7 +71,7 @@ logs/
 *.crt
 secrets/
 secrets/certs/
-config/local.yaml
+config/config.local.yaml
 
 # -----------------------------
 # Delve debug binaries
