--- a/config/config.dev.yaml
+++ b/config/config.dev.yaml
@@ -24,6 +24,7 @@ security:
     - /auth/refresh
     - /tasks/search
     - /tasks
+    - /tasks/:id
     - /tasks/statuses
     - /swagger-ui/*any
 
@@ -37,7 +38,7 @@ jwt:
 
 cors:
   allow_origins: [ "http://localhost:5173" ]
-  allow_methods: [ "GET", "POST", "PUT", "DELETE", "OPTIONS" ]
+  allow_methods: [ "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS" ]
   allow_headers: [ "Content-Type", "Authorization" , "No-Auth"]
   allow_credentials: true
 
